tests/paczka1/fuzzy1/43284442.err
Error in line 12: dbD S127 19,9
Error in line 23: dbD A204 90,4
Error in line 37: T3SB9v9K S127 69,6
